Ros2_workspace/log/build_2022-05-11_08-10-40/got_coffe/stderr.log
  File "/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py", line 82
    !fswebcam  --no-banner --save {orig_img_path} -d /dev/video0 2> /dev/null
    ^
SyntaxError: invalid syntax

